--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
         <ImageView
+            android:id="@+id/playOrPause"
             android:layout_width="144dp"
             android:layout_height="144dp"
             android:layout_gravity="center"
+            android:visibility="invisible"
             android:background="@drawable/btn_play"
             />
     </FrameLayout>
@@ -54,43 +56,12 @@
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="28dp"/>
     </LinearLayout>
-    <LinearLayout
-        android:background="#ff00"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center">
-        <ImageView android:id="@+id/videoplaystate"
-            android:layout_width="70dp"
-            android:layout_weight="13"
-            android:layout_height="wrap_content"
-            android:src="@drawable/videoplaystate"/>
-        <ImageView android:id="@+id/rewind"
-            android:layout_width="70dp"
-            android:layout_weight="8"
-            android:layout_height="wrap_content"
-            android:src="@drawable/rewind"/>
-        <ImageView android:id="@+id/last"
-            android:layout_width="70dp"
-            android:layout_weight="8"
-            android:layout_height="wrap_content"
-            android:src="@drawable/lastsong"/>
-        <ImageView android:id="@+id/next"
-            android:layout_width="70dp"
-            android:layout_weight="8"
-            android:layout_height="wrap_content"
-            android:src="@drawable/nextsong"/>
-        <ImageView android:id="@+id/fastforward"
-            android:layout_width="70dp"
-            android:layout_weight="8"
-            android:layout_height="wrap_content"
-            android:src="@drawable/fastforward"/>
-    </LinearLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2.5"
-        android:background="#ffff00"
+        android:background="#5500ff00"
         android:layout_marginTop="42dp"
         >
         <ImageView
@@ -104,6 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="110dp"></ListView>
+
         <TextView android:id="@+id/noFile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
