--- a/app/src/main/res/layout/video_listview_content.xml
+++ b/app/src/main/res/layout/video_listview_content.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
-    <ImageView android:id="@+id/icon"
-        android:layout_width="52dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="47dp"
-        android:layout_marginLeft="47dp"/>
-    <TextView android:id="@+id/name"
+    android:layout_height="match_parent"
+    android:minHeight="350dp"
+    android:orientation="vertical"
+   android:layout_gravity="center"
+    android:background="#00dd0f">
+    <FrameLayout
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:textColor="#ffffff"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="139dp"
-        android:layout_marginLeft="139dp"/>
-    <ImageView android:id="@+id/underline"
+        android:layout_height="280dp"
+       >
+        <ImageView android:id="@+id/icon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:scaleType="fitXY"
+            />
+        <ImageView
+            android:id="@+id/video_pic_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:visibility="gone"
+            android:background="@drawable/video_select_bg"/>
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        android:src="@drawable/listview_underline"/>
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:gravity="center"
+        android:textSize="36dp" />
 
-</FrameLayout>
+
+</LinearLayout>
