--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
+    <TextView
+        android:id="@+id/video_name"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:paddingStart="40dp"
+        android:textColor="#FFFFFF"
+        android:background="#696969"
+        android:text="视频名称"
+        android:gravity="center_vertical"
+        android:textSize="36dp"/>
     <FrameLayout
         android:id="@+id/video_container"
-        android:background="#ffff"
+        android:background="#000000"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_height="800dp"
         android:clickable="true"
-        android:gravity="center">
-
+        >
         <VideoView android:id="@+id/videoView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,34 +34,46 @@
             android:visibility="invisible"
             android:background="@drawable/btn_play"
             />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom">
+            <TextView android:id="@+id/time_current"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30dp"
+                android:text="当前时间"
+                android:textColor="#ffffff"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginStart="28dp"/>
+            <SeekBar android:id="@+id/seek"
+                android:layout_width="700dp"
+                android:layout_height="90dp"
+                android:thumb="@drawable/thumb"
+                android:progressDrawable="@drawable/seekbar"/>
+            <TextView android:id="@+id/time_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30dp"
+                android:text="总时间"
+                android:textColor="#ffffff"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="28dp"/>
+        </LinearLayout>
     </FrameLayout>
+
     <LinearLayout
-        android:background="#000fff"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center">
-        <TextView android:id="@+id/time_current"
+        android:background="#696969"
+        android:layout_margin="40dp"
+        android:layout_height="100dp">
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:text="当前时间"
-            android:textColor="#00dfff"
-            android:layout_gravity="center_vertical|start"
-            android:layout_marginStart="28dp"/>
-        <SeekBar android:id="@+id/seek"
-            android:layout_width="700dp"
-            android:layout_height="90dp"
-            android:thumb="@drawable/thumb"
-            android:progressDrawable="@drawable/seekbar"/>
-        <TextView android:id="@+id/time_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:text="总时间"
-            android:textColor="#ffffff"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="28dp"/>
+            android:layout_height="match_parent"
+            android:layout_marginLeft="50dp"
+            android:gravity="center"
+            android:text="视频列表"
+            android:textSize="36dp"/>
     </LinearLayout>
 
     <FrameLayout
@@ -62,7 +81,6 @@
         android:layout_height="0dp"
         android:layout_weight="2.5"
         android:background="#5500ff00"
-        android:layout_marginTop="42dp"
         >
 
 
@@ -73,7 +91,7 @@
             android:listSelector="@null"
             android:horizontalSpacing="10dp"
             android:verticalSpacing="10dp"
-            android:background="#c9c9c9"
+            android:background="#000000"
             android:numColumns="3"
             android:scrollbars="none"
             android:fadingEdge="none"
